fix(): Make labels invisible not inaccessible

--- a/src/components/capacitor-site-footer/capacitor-site-footer.scss
+++ b/src/components/capacitor-site-footer/capacitor-site-footer.scss
@@ -91,7 +91,8 @@ capacitor-site-footer {
       max-width: 276px;
       
       label {
-        display: none;
+        position: absolute;
+        opacity: 0;
       }
     }
   
